bug fixed of cursor on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,4 +1,7 @@
 @import 'victormono';
+* {
+	cursor: none !important;
+}
 html {
 	all: initial;
 	scroll-behavior: smooth;
